[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.2.0",
]
linting = [
    "isort>=5.11.4",
    "black>=22.12.0",
    "flake8>=6.0.0",
]
dev = [
    "ipython>=8.8.0",
]

[project]
name = "poc-wp-podman"
version = "0.1.0"
description = "Poc wp podman"
authors = [
    {name = "Sandro Loch", email = "es.loch@gmail.com"},
]
dependencies = [
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
